fixed missing space index.html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,11 +143,13 @@ a.card-link:hover,
 }
 
 @media only screen and (max-width: 767px) {
+  
   .mobilCaption {
     display: block;
     background-color: #343a40;
     opacity: 0.7;
     color: white;
     padding: 10px 15px 30px;
+    height: 300px;
   }
 }
